--- a/src/components/TopHeader/style.module.css
+++ b/src/components/TopHeader/style.module.css
@@ -4,7 +4,7 @@
 }
 .headerInfoleft ul li ,.headserInfoRight ul li {
     display: inline-block;
-    padding: 0 15px;
+    padding: var(--menu-padding);
     color: #292621;
     font-size: 13px;
 }
@@ -20,7 +20,7 @@
     transition: all 0.5s;
 }
 .headerSocialIcon li a svg:hover{
-    color: #FF2020;
+    color: var(--bg-color);
     transform: rotateY(180deg);
     
 }
