--- a/src/style/app.css
+++ b/src/style/app.css
@@ -1,7 +1,24 @@
+@import url('https://fonts.googleapis.com/css2?family=Jost&display=swap');
 *{
     margin: 0;
     padding: 0px;
     box-sizing: border-box;
+}
+body{
+    font-family: 'Jost', sans-serif;
+    font-weight: normal;
+    font-style: normal;
+    font-size: 16px;
+}
+::after,::before{
+    box-sizing: border-box;
+}
+:root{
+    --bg-color:#FF2020;
+    --menu-padding:0 15px;
+}
+p{
+    font-family: "Jost",sans-serif;
 }
 .p{
 padding:0px 50px;
